// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/page/Nav/SideMenu/MockSelectItemOptions should render snap when has list data 1`] = `
<body>
  <div>
    <div
      class="css-11lv9el"
    >
      <div
        class="ant-select-item ant-select-item-option"
      >
        <div
          class="ant-select-item-option-content"
        >
          <div
            class="css-gmbytu"
          >
            <span
              class="css-u3jcp4"
            >
              <svg
                aria-hidden="true"
                data-icon="lock"
                fill="currentColor"
                focusable="false"
                height="18"
                viewBox="64 64 896 896"
                width="18"
              >
                <path
                  d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                />
              </svg>
            </span>
            <span
              class="project-selector-label-text"
            >
              test1
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-select-item ant-select-item-option"
      >
        <div
          class="ant-select-item-option-content"
        >
          <div
            class="css-gmbytu"
          >
            <span
              class="project-flag-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="18"
                viewBox="0 0 18 18"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.25 2.25H9.2865C9.42575 2.25007 9.56222 2.28891 9.68064 2.36216C9.79907 2.43542 9.89476 2.54019 9.957 2.66475L10.5 3.75H15C15.1989 3.75 15.3897 3.82902 15.5303 3.96967C15.671 4.11032 15.75 4.30109 15.75 4.5V12.75C15.75 12.9489 15.671 13.1397 15.5303 13.2803C15.3897 13.421 15.1989 13.5 15 13.5H10.2135C10.0743 13.4999 9.93778 13.4611 9.81936 13.3878C9.70093 13.3146 9.60524 13.2098 9.543 13.0853L9 12H3.75V16.5H2.25V2.25Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="project-selector-label-text"
            >
              test2
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/MockSelectItemOptions should render snap when has list data 2`] = `
<body>
  <div>
    <div
      class="css-11lv9el"
    >
      <div
        class="ant-select-item ant-select-item-option"
      >
        <div
          class="ant-select-item-option-content"
        >
          <div
            class="css-gmbytu"
          >
            <span
              class="css-u3jcp4"
            >
              <svg
                aria-hidden="true"
                data-icon="lock"
                fill="currentColor"
                focusable="false"
                height="18"
                viewBox="64 64 896 896"
                width="18"
              >
                <path
                  d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                />
              </svg>
            </span>
            <span
              class="project-selector-label-text"
            >
              test1
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-select-item ant-select-item-option ant-select-item-option-active"
      >
        <div
          class="ant-select-item-option-content"
        >
          <div
            class="css-gmbytu"
          >
            <span
              class="project-flag-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="18"
                viewBox="0 0 18 18"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.25 2.25H9.2865C9.42575 2.25007 9.56222 2.28891 9.68064 2.36216C9.79907 2.43542 9.89476 2.54019 9.957 2.66475L10.5 3.75H15C15.1989 3.75 15.3897 3.82902 15.5303 3.96967C15.671 4.11032 15.75 4.30109 15.75 4.5V12.75C15.75 12.9489 15.671 13.1397 15.5303 13.2803C15.3897 13.421 15.1989 13.5 15 13.5H10.2135C10.0743 13.4999 9.93778 13.4611 9.81936 13.3878C9.70093 13.3146 9.60524 13.2098 9.543 13.0853L9 12H3.75V16.5H2.25V2.25Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="project-selector-label-text"
            >
              test2
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/MockSelectItemOptions should render snap when has list data 3`] = `
<body>
  <div>
    <div
      class="css-11lv9el"
    >
      <div
        class="ant-select-item ant-select-item-option"
      >
        <div
          class="ant-select-item-option-content"
        >
          <div
            class="css-gmbytu"
          >
            <span
              class="css-u3jcp4"
            >
              <svg
                aria-hidden="true"
                data-icon="lock"
                fill="currentColor"
                focusable="false"
                height="18"
                viewBox="64 64 896 896"
                width="18"
              >
                <path
                  d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                />
              </svg>
            </span>
            <span
              class="project-selector-label-text"
            >
              test1
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-select-item ant-select-item-option"
      >
        <div
          class="ant-select-item-option-content"
        >
          <div
            class="css-gmbytu"
          >
            <span
              class="project-flag-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="18"
                viewBox="0 0 18 18"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.25 2.25H9.2865C9.42575 2.25007 9.56222 2.28891 9.68064 2.36216C9.79907 2.43542 9.89476 2.54019 9.957 2.66475L10.5 3.75H15C15.1989 3.75 15.3897 3.82902 15.5303 3.96967C15.671 4.11032 15.75 4.30109 15.75 4.5V12.75C15.75 12.9489 15.671 13.1397 15.5303 13.2803C15.3897 13.421 15.1989 13.5 15 13.5H10.2135C10.0743 13.4999 9.93778 13.4611 9.81936 13.3878C9.70093 13.3146 9.60524 13.2098 9.543 13.0853L9 12H3.75V16.5H2.25V2.25Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="project-selector-label-text"
            >
              test2
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/MockSelectItemOptions should render snap when list is empty 1`] = `
<body>
  <div>
    <div
      class="css-11lv9el"
    />
  </div>
</body>
`;
